tests/snapshots/parse_input__mermaid_math_parse_tree.snap
---
source: tests/parse_input.rs
expression: "mermaid.join(\"\\n\")"
---
flowchart TD
0["sum"] --> 1["sum"]
1["sum"] --> 2["product"]
2["product"] --> 3["factor"]
3["factor"] --> 4["number"]
4["number"] --> 5["digit"]
5["digit"] --> 6["1"]
0["sum"] --> 7["add"]
7["add"] --> 8["+"]
0["sum"] --> 9["product"]
9["product"] --> 10["factor"]
10["factor"] --> 11["("]
10["factor"] --> 12["sum"]
12["sum"] --> 13["sum"]
13["sum"] --> 14["product"]
14["product"] --> 15["product"]
15["product"] --> 16["factor"]
16["factor"] --> 17["number"]
17["number"] --> 18["digit"]
18["digit"] --> 19["2"]
14["product"] --> 20["mult"]
20["mult"] --> 21["*"]
14["product"] --> 22["factor"]
22["factor"] --> 23["number"]
23["number"] --> 24["digit"]
24["digit"] --> 25["3"]
12["sum"] --> 26["add"]
26["add"] --> 27["-"]
12["sum"] --> 28["product"]
28["product"] --> 29["factor"]
29["factor"] --> 30["number"]
30["number"] --> 31["digit"]
31["digit"] --> 32["4"]
10["factor"] --> 33[")"]

