tests/snapshots/parse_input__mermaid_silly_syntax_salad.snap
---
source: tests/parse_input.rs
expression: output
---
flowchart TD
0["list"] --> 1["#91;"]
0["list"] --> 2["items"]
2["items"] --> 3["string"]
3["string"] --> 4["#34;foo#34;"]
2["items"] --> 5[","]
2["items"] --> 6["items"]
6["items"] --> 7["string"]
7["string"] --> 8["#34;bar#34;"]
6["items"] --> 9[","]
6["items"] --> 10["items"]
10["items"] --> 11["string"]
11["string"] --> 12["#34;baz#34;"]
0["list"] --> 13["#93;"]
