tests/snapshots/parse_input__nested_empty_post.snap
---
source: tests/parse_input.rs
expression: "parses.join(\"\\n\")"
---
<start> ::= <a> <empty>
├── <a> ::= "a" <empty>
│   ├── "a"
│   └── <empty> ::= ""
│       └── ""
└── <empty> ::= ""
    └── ""

