tests/snapshots/parse_input__nested_empty_pre.snap
---
source: tests/parse_input.rs
expression: "parses.join(\"\\n\")"
---
<start> ::= <empty> <a>
├── <empty> ::= ""
│   └── ""
└── <a> ::= <empty> "a"
    ├── <empty> ::= ""
    │   └── ""
    └── "a"

