tests/snapshots/parse_input__nested_empty_pre_and_post.snap
---
source: tests/parse_input.rs
expression: "parses.join(\"\\n\")"
---
<start> ::= <empty> <a> <empty>
├── <empty> ::= ""
│   └── ""
├── <a> ::= <empty> "a" <empty>
│   ├── <empty> ::= ""
│   │   └── ""
│   ├── "a"
│   └── <empty> ::= ""
│       └── ""
└── <empty> ::= ""
    └── ""

