tests/snapshots/parse_input__recursive_nested_infinite.snap
---
source: tests/parse_input.rs
expression: "parses[0..=3].join(\"\\n\")"
---
<a> ::= "z"
└── "z"

<a> ::= <b>
└── <b> ::= <a>
    └── <a> ::= "z"
        └── "z"

<a> ::= <b>
└── <b> ::= <a>
    └── <a> ::= <b>
        └── <b> ::= <a>
            └── <a> ::= "z"
                └── "z"

<a> ::= <b>
└── <b> ::= <a>
    └── <a> ::= <b>
        └── <b> ::= <a>
            └── <a> ::= <b>
                └── <b> ::= <a>
                    └── <a> ::= "z"
                        └── "z"

