tests/snapshots/parse_input__undefined_prod.snap
---
source: tests/parse_input.rs
expression: parses.next().unwrap()
---
<start> ::= <a>
└── <a> ::= "a"
    └── "a"

