tests/snapshots/parse_input__undefined_prod_deprecated_parses.snap
---
source: tests/parse_input.rs
expression: "parses.join(\"\\n\")"
---
<start> ::= <a>
└── <a> ::= "a"
    └── "a"
